--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -10,16 +10,16 @@
         android:id="@id/collapsingToolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:minHeight="?attr/actionBarSize"
-        app:collapsedTitleTextAppearance="@style/Hedvig.TextAppearance.Body1"
-        app:expandedTitleTextAppearance="@style/Hedvig.TextAppearance.Headline4"
+        android:minHeight="?actionBarSize"
+        app:collapsedTitleTextAppearance="?textAppearanceBody1"
+        app:expandedTitleTextAppearance="?textAppearanceHeadline4"
         app:layout_scrollFlags="scroll|exitUntilCollapsed"
         app:toolbarId="@id/toolbar">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="?actionBarSize"
             app:layout_collapseMode="pin"
             app:title="" />
 
