--- a/app/src/main/res/layout/profile_menu_row.xml
+++ b/app/src/main/res/layout/profile_menu_row.xml
@@ -16,7 +16,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/ic_my_home" />
+        tools:src="@drawable/ic_my_info" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -38,7 +38,7 @@
             android:id="@id/profile_menu_row_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?textAppearanceBody1"
+            android:textAppearance="?textAppearanceBody2"
             tools:text="109 kr/månad - Betalas via autogiro" />
     </LinearLayout>
 
