--- a/app/src/main/res/layout/offer_peril_area.xml
+++ b/app/src/main/res/layout/offer_peril_area.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <TextView
@@ -16,13 +16,13 @@
 
     <TextView
         android:id="@+id/perilInfo"
-        android:textAppearance="?textAppearanceBody1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/base_margin_double"
         android:layout_marginTop="@dimen/base_margin_double"
         android:layout_marginEnd="@dimen/base_margin_double"
         android:gravity="center_horizontal"
+        android:textAppearance="?textAppearanceBody1"
         tools:text="Hedvigs hemförsäkring erbjuder ett bra skydd för din lägenhet, dina saker samt dig och din familj när ni reser." />
 
     <LinearLayout
@@ -40,29 +40,24 @@
             android:src="@drawable/ic_coverage" />
 
         <TextView
-            android:textAppearance="?textAppearanceBody1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/OFFER_SCREEN_PERIL_SECTION_TITLE" />
+            android:text="@string/OFFER_SCREEN_PERIL_SECTION_TITLE"
+            android:textAppearance="?textAppearanceBody1" />
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/perilButtonContainer"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/perilsRecycler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginStart="@dimen/base_margin_sesqui"
         android:layout_marginTop="@dimen/base_margin_triple"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/perilsRecycler"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:nestedScrollingEnabled="false"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:spanCount="2"
-            tools:listitem="@layout/peril_detail" />
-    </LinearLayout>
+        android:layout_marginEnd="@dimen/base_margin_sesqui"
+        android:nestedScrollingEnabled="false"
+        android:overScrollMode="never"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2"
+        tools:listitem="@layout/peril_detail" />
 
 </LinearLayout>
