--- a/app/src/main/res/drawable/ic_all_risk.xml
+++ b/app/src/main/res/drawable/ic_all_risk.xml
@@ -1,3 +1,10 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="48dp" android:height="48dp" android:viewportWidth="48" android:viewportHeight="48">
-    <path android:pathData="M14.25 12c0-2.614 2.136-4.75 4.75-4.75h10c2.602 0 4.75 2.024 4.75 4.75v24c0 2.614-2.136 4.75-4.75 4.75H19c-2.614 0-4.75-2.136-4.75-4.75V12zM19 8.75c-1.786 0-3.25 1.464-3.25 3.25v9.1l4.681-5.004 6.724-0.988 3.736-5.774C30.36 8.962 29.706 8.75 29 8.75H19zM15.75 36v-3.455l6.286-2.038 4.708 8.743H19c-1.786 0-3.25-1.464-3.25-3.25zm6.243-7.056l-6.243 2.024v-7.672l5.01-5.354 5.436 6.71-4.203 4.292zm6.455 10.306l-4.25-7.892 8.052 4.102V36c0 1.786-1.464 3.25-3.25 3.25h-0.552zm-4.797-9.855l8.599 4.381V25.45h-4.735l-3.864 3.945zm3.907-5.445l-5.347-6.6 5.834-0.857 3.866-5.975c0.217 0.438 0.339 0.94 0.339 1.482v11.95h-4.692z" android:fillColor="#121212" android:fillType="evenOdd"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="48dp"
+    android:height="48dp"
+    android:viewportWidth="48"
+    android:viewportHeight="48">
+    <path
+        android:fillColor="?colorPrimary"
+        android:fillType="evenOdd"
+        android:pathData="M14.25 12c0-2.614 2.136-4.75 4.75-4.75h10c2.602 0 4.75 2.024 4.75 4.75v24c0 2.614-2.136 4.75-4.75 4.75H19c-2.614 0-4.75-2.136-4.75-4.75V12zM19 8.75c-1.786 0-3.25 1.464-3.25 3.25v9.1l4.681-5.004 6.724-0.988 3.736-5.774C30.36 8.962 29.706 8.75 29 8.75H19zM15.75 36v-3.455l6.286-2.038 4.708 8.743H19c-1.786 0-3.25-1.464-3.25-3.25zm6.243-7.056l-6.243 2.024v-7.672l5.01-5.354 5.436 6.71-4.203 4.292zm6.455 10.306l-4.25-7.892 8.052 4.102V36c0 1.786-1.464 3.25-3.25 3.25h-0.552zm-4.797-9.855l8.599 4.381V25.45h-4.735l-3.864 3.945zm3.907-5.445l-5.347-6.6 5.834-0.857 3.866-5.975c0.217 0.438 0.339 0.94 0.339 1.482v11.95h-4.692z" />
 </vector>
