status bar dark

--- a/app/src/main/res/values-v23/styles.xml
+++ b/app/src/main/res/values-v23/styles.xml
@@ -21,4 +21,9 @@
         <item name="android:windowLightStatusBar">false</item>
     </style>
 
+    <style name="Hedvig.Theme.Splash">
+        <item name="android:windowLightStatusBar">false</item>
+        <item name="android:windowBackground">@drawable/splash_background</item>
+    </style>
+
 </resources>
