edge to edge on LoggedInActivity

--- a/app/src/main/res/layout/fragment_new_referral.xml
+++ b/app/src/main/res/layout/fragment_new_referral.xml
@@ -5,7 +5,8 @@
     android:id="@+id/invites"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/bottom_navigation_height"
+    android:clipToPadding="false"
+    android:paddingTop="@dimen/base_margin_double"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.hedvig.app.feature.referrals.ReferralsFragment"
