Fix a missing label on the payment screen

--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -56,7 +56,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/base_margin_double"
-                android:textColor="?colorError"
+                android:textColor="?colorSecondary"
                 android:visibility="gone"
                 tools:text="@string/PROFILE_PAYMENT_CHANGE_BANK_ACCOUNT"
                 tools:visibility="visible" />
