--- a/app/src/main/res/layout/payment_details_section.xml
+++ b/app/src/main/res/layout/payment_details_section.xml
@@ -104,13 +104,12 @@
             app:layout_constraintEnd_toEndOf="parent"
             tools:text="**** 1234" />
 
-        <!-- TODO: Translation -->
         <TextView
             android:id="@+id/validUntilLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/base_margin_triple"
-            android:text="Valid until"
+            android:text="@string/PAYMENTS_CREDIT_CARD_EXPIRY_DATE_LABEL"
             android:textAppearance="?textAppearanceBody2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cardType" />
