--- a/app/src/debug/res/layout/activity_development.xml
+++ b/app/src/debug/res/layout/activity_development.xml
@@ -69,12 +69,12 @@
             android:text="Open an logged in without Welcome Screen" />
 
         <Button
-            android:id="@+id/openWebOnboarding"
+            android:id="@+id/openConnectPayment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/base_margin_double"
-            android:text="Open in-app web onboarding" />
+            android:text="Open Connect Payment" />
 
         <Button
             android:id="@+id/openAlert"
