--- a/app/src/main/res/layout/hedvig_toolbar.xml
+++ b/app/src/main/res/layout/hedvig_toolbar.xml
@@ -6,28 +6,13 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/hedvigToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?android:colorBackground"
         android:clipChildren="false"
-        android:clipToPadding="false">
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clipChildren="false">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginEnd="@dimen/base_margin_double"
-                android:src="@drawable/ic_chat" />
-        </FrameLayout>
-
-    </Toolbar>
+        android:clipToPadding="false" />
 
     <TextView
         android:id="@+id/toolbarText"
