--- a/app/src/main/res/layout/activity_contract_coverage_detail.xml
+++ b/app/src/main/res/layout/activity_contract_coverage_detail.xml
@@ -91,9 +91,11 @@
 
     </androidx.core.widget.NestedScrollView>
 
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/hedvig_toolbar"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/hedvigToolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?android:colorBackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
