--- a/app/src/main/res/layout/fragment_claims.xml
+++ b/app/src/main/res/layout/fragment_claims.xml
@@ -9,6 +9,7 @@
     <androidx.core.widget.NestedScrollView
         android:id="@+id/claimsNestedScrollView"
         android:clipToPadding="false"
+        android:paddingBottom="@dimen/logged_in_tabs_bottom_padding"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
