--- a/app/src/main/res/layout/fragment_key_gear.xml
+++ b/app/src/main/res/layout/fragment_key_gear.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:clipToPadding="false"
     android:orientation="vertical"
+    android:paddingBottom="@dimen/logged_in_tabs_bottom_padding"
     tools:context=".feature.keygear.ui.tab.KeyGearFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
