--- a/app/src/main/res/layout/fragment_new_referral.xml
+++ b/app/src/main/res/layout/fragment_new_referral.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:clipToPadding="false"
     android:paddingTop="@dimen/base_margin_double"
+    android:paddingBottom="@dimen/logged_in_tabs_bottom_padding"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.hedvig.app.feature.referrals.ReferralsFragment"
