--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -17,6 +17,14 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/base_margin_double"
+                android:text="@string/PROFILE_FEEDBACK_TITLE"
+                android:textAppearance="?textAppearanceHeadline4" />
+
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="176dp">
