--- a/app/src/main/res/layout/activity_my_info.xml
+++ b/app/src/main/res/layout/activity_my_info.xml
@@ -25,11 +25,58 @@
             android:layout_height="match_parent"
             android:layout_marginBottom="?attr/actionBarSize">
 
+            <TextView
+                android:id="@+id/header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/base_margin_double"
+                android:text="@string/PROFILE_MY_INFO_TITLE"
+                android:textAppearance="?textAppearanceHeadline4"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <include layout="@layout/loading_spinner" />
 
-            <include
+            <FrameLayout
                 android:id="@+id/sphereContainer"
-                layout="@layout/sphere_container" />
+                android:layout_width="@dimen/profile_sphere_side_length"
+                android:layout_height="@dimen/profile_sphere_side_length"
+                android:layout_marginTop="@dimen/base_margin_triple"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/header"
+                tools:showIn="@layout/activity_my_info"
+                tools:visibility="visible">
+
+                <ImageView
+                    android:id="@id/sphere"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@null"
+                    app:srcCompat="@drawable/sphere"
+                    tools:tint="@color/dark_purple" />
+
+                <TextView
+                    android:id="@+id/sphereText"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:ellipsize="end"
+                    android:gravity="center"
+                    android:maxLines="2"
+                    android:padding="@dimen/sphere_text_padding"
+                    android:textColor="?colorOnPrimary"
+                    app:autoSizeMaxTextSize="@dimen/sphere_text_max_text_size"
+                    app:autoSizeMinTextSize="@dimen/sphere_text_min_text_size"
+                    app:autoSizeStepGranularity="@dimen/sphere_text_step_granularity"
+                    app:autoSizeTextType="uniform"
+                    tools:text="Testina Testsdotteri" />
+            </FrameLayout>
+
+            <!--            <include-->
+            <!--                android:id="@+id/sphereContainer"-->
+            <!--                layout="@layout/sphere_container"/>-->
 
             <LinearLayout
                 android:id="@id/contactDetailsContainer"
