I kind of like this TDD actually

--- a/app/src/main/res/layout/activity_embark.xml
+++ b/app/src/main/res/layout/activity_embark.xml
@@ -6,11 +6,9 @@
 
     <include layout="@layout/loading_spinner" />
 
-    <TextView
-        android:id="@+id/messages"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?textAppearanceBody1"
-        android:visibility="gone" />
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/passageContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
