--- a/app/src/main/res/layout/activity_norwegian_authentication.xml
+++ b/app/src/main/res/layout/activity_norwegian_authentication.xml
@@ -8,7 +8,7 @@
 
     <!-- TODO: Text Key -->
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/hedvigToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:navigationIcon="@drawable/ic_close"
