--- a/app/src/main/res/layout/activity_connect_payment.xml
+++ b/app/src/main/res/layout/activity_connect_payment.xml
@@ -90,7 +90,7 @@
         android:orientation="vertical">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/hedvigToolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="gone"
