--- a/app/src/main/res/layout/activity_my_info.xml
+++ b/app/src/main/res/layout/activity_my_info.xml
@@ -9,7 +9,7 @@
     tools:context="com.hedvig.app.feature.profile.ui.myinfo.MyInfoActivity">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/hedvigToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?android:colorBackground" />
@@ -73,10 +73,6 @@
                     app:autoSizeTextType="uniform"
                     tools:text="Testina Testsdotteri" />
             </FrameLayout>
-
-            <!--            <include-->
-            <!--                android:id="@+id/sphereContainer"-->
-            <!--                layout="@layout/sphere_container"/>-->
 
             <LinearLayout
                 android:id="@id/contactDetailsContainer"
