--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
     </style>
 
     <style name="Hedvig.Theme.LoggedIn">
-        <item name="android:navigationBarColor">@color/color_background_85</item>
+        <item name="android:navigationBarColor">@color/transparent</item>
     </style>
 
     <style name="Hedvig.Theme.Chat">
