--- a/app/src/main/res/layout/chat_input_view.xml
+++ b/app/src/main/res/layout/chat_input_view.xml
@@ -20,11 +20,11 @@
             android:id="@+id/attach_file_background"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/ic_attach_file_background"
             android:layout_gravity="center_vertical|bottom"
             android:layout_marginStart="@dimen/base_margin_half"
             android:layout_marginEnd="@dimen/base_margin_half"
-            android:layout_marginBottom="@dimen/base_margin">
+            android:layout_marginBottom="@dimen/base_margin"
+            android:background="@drawable/ic_attach_file_background">
 
             <ImageView
                 android:id="@+id/uploadFile"
